5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1642_2731.log
== TEST (2019-04-12 14:48:49) 
-- CODE:
a = float(input('a: '))
b = float(input('b: '))
r = float(input('raio: '))

EQ = (x - a)**2 + (y - b)**2 - r**2 

if (b > 0):
	print('Superiores'):
	
if (b < 0):
	print('Inferiores'):
		
-- ERROR:
File "XXXX", line 8
    print('Superiores'):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:48:56) 
-- CODE:
a = float(input('a: '))
b = float(input('b: '))
r = float(input('raio: '))

EQ = (x - a)**2 + (y - b)**2 - r**2 

if (b > 0):
	print('Superiores'):
	
if (b < 0):
	print('Inferiores')
		
-- ERROR:
File "XXXX", line 8
    print('Superiores'):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:48:58) 
-- CODE:
a = float(input('a: '))
b = float(input('b: '))
r = float(input('raio: '))

EQ = (x - a)**2 + (y - b)**2 - r**2 

if (b > 0):
	print('Superiores')
	
if (b < 0):
	print('Inferiores')
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    EQ = (x - a)**2 + (y - b)**2 - r**2 
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:49:08) 
-- CODE:
a = float(input('a: '))
b = float(input('b: '))
r = float(input('raio: '))



if (b > 0):
	print('Superiores')
	
if (b < 0):
	print('Inferiores')
		
-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:49:15) 
-- CODE:
a = float(input('a: '))
b = float(input('b: '))
r = float(input('raio: '))



if (b > 0):
	print('Superiores')
	
if (b < 0):
	print('Inferiores')
		
-- EXECUTION TIME:
0.190936
-- TEST CASE 1:
---- input:
4.5
-2.2
3
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
3
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
1
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
